updated nav right margin to prevent text cutoff

--- a/src/nav.css
+++ b/src/nav.css
@@ -7,7 +7,7 @@ nav {
     }
 
 nav ul {
-    margin-right: 2%;
+    margin-right: 5%;
     }
 
 nav li {
